add SVGs and cards

--- a/main.css
+++ b/main.css
@@ -24,10 +24,7 @@ a:active {
 
 
 /* Reusable styles */
-.full-size {
-    height: 100%;
-    width: 100%;
-}
+/*
 
 .flex {
     display: flex;
@@ -44,4 +41,6 @@ a:active {
 .space-between {
     justify-content: space-between;
 }
+
+*/
 
