--- a/main.css
+++ b/main.css
@@ -67,4 +67,13 @@ a:active {
     color: white;
 }
 
+.border-radius {
+    border-radius: 10%;
+}
+
+.skill-size {
+    height: 4rem;
+    width: 4rem;
+}
+
 
