--- a/main.css
+++ b/main.css
@@ -52,6 +52,10 @@ body {
     box-shadow: 5px 10px #4f4f4f;
 }
 
+.showcase {
+    height: 20rem;
+}
+
 /* Reusable styles */
 
 .accent-color {
@@ -70,4 +74,13 @@ body {
 
 .bg-accent {
     background: var(--accent-color);
+}
+
+.bg-white {
+    background: #FFFF;
+}
+
+.green-space {
+    background: var(--primary-color);
+    height: 4rem;
 }
