--- a/main.css
+++ b/main.css
@@ -80,6 +80,10 @@ body {
     background: #FFFF;
 }
 
+.rounded-corners {
+    border-radius: 20px;
+}
+
 .green-space {
     background: var(--primary-color);
     height: 4rem;
